# car-dashboard

./: .gitignore  LICENSE  Makefile  README.md  car-dashboard-stream-music  car-dashboard.cabal  car-dashboard.service  package.bash  package.json  package.sh  stack.yaml  tsconfig.json  typings.json
app/: Main.hs
data/html/: app.js  index.html  knob.js
data/html/ts/: app.ts
src/Dashboard/: CarUnit.hs  MusicUnit.hs  Paths.hs  Server.hs  Settings.hs
src/Dashboard/CarUnit/: Json.hs
src/Dashboard/MusicUnit/: Files.hs  Monad.hs  Player.hs  State.hs
src/Dashboard/MusicUnit/State/: Metadata.hs  TrackData.hs
src/Dashboard/Server/: Errors.hs  Logger.hs  Monad.hs  Routes.hs
src/Dashboard/Server/Routes/: All.hs  Api.hs  Json.hs  Music.hs  Static.hs
