name:                car-dashboard
version:             0.1.0.0
synopsis:            Car Dashboard
description:         Please see README.md
homepage:            https://github.com/hverr/car-dashboard
license:             GPLv3
license-file:        LICENSE
author:              Henri Verroken
maintainer:          henriverroken@gmail.com
copyright:           2016 Henri Verroken
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall -Werror
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable car-dashboard
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:       base
                     , car-dashboard
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

test-suite car-dashboard-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , car2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/car2
