name:                car-dashboard
version:             0.1.0.0
synopsis:            Car Dashboard
description:         Please see README.md
homepage:            https://github.com/hverr/car-dashboard
license:             GPLv3
license-file:        LICENSE
author:              Henri Verroken
maintainer:          henriverroken@gmail.com
copyright:           2016 Henri Verroken
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Dashboard.CarUnit
                     , Dashboard.CarUnit.Json
                     , Dashboard.Paths
                     , Dashboard.Server
                     , Dashboard.Server.Errors
                     , Dashboard.Server.Logger
                     , Dashboard.Server.Monad
                     , Dashboard.Server.Routes
                     , Dashboard.Server.Routes.All
                     , Dashboard.Server.Routes.Api
                     , Dashboard.Server.Routes.Json
                     , Dashboard.Server.Routes.Static
                     , Dashboard.Settings
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 0.11.2.1 && < 0.12
                     , aeson-pretty >= 0.7.2 && < 0.8
                     , bytestring >= 0.10.6.0 && < 0.11
                     , clock >= 0.7.2 && < 0.8
                     , dimensional >= 1.0.1.2 && < 1.2
                     , directory >= 1.2.2.0 && < 1.3
                     , filepath >= 1.4.0.0 && < 1.5
                     , hslogger >= 1.2.10 && < 1.3
                     , http-types >= 0.9.1 && < 0.10
                     , lens >= 4.13 && < 4.14
                     , mime-types >= 0.1.0.7 && < 0.2
                     , mtl >= 2.2.1 && < 2.3
                     , obd >= 0.2.1.1 && < 0.3
                     , stm >= 2.4.4.1 && < 2.5
                     , text >= 1.2.2.1 && < 1.3
                     , time >= 1.5.0.1 && < 1.6
                     , transformers >= 0.4.2.0 && < 0.5
                     , wai >= 3.2.1.1 && < 3.3
                     , warp >= 3.2.8 && < 3.3
  ghc-options:         -Wall -Werror
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable car-dashboard
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:       base
                     , car-dashboard
                     , hslogger >= 1.2.10 && < 1.3
                     , lens >= 4.13 && < 4.14
                     , obd >= 0.2.1.1 && < 0.3
                     , optparse-applicative >= 0.12.1.0 && < 0.13
                     , stm >= 2.4.4.1 && < 2.5
                     , transformers >= 0.4.2.0 && < 0.5
                     , unix >= 2.7.1.0 && < 2.8
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

test-suite car-dashboard-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , car2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/car2
